--- a/index.html
+++ b/index.html
@@ -86,7 +86,14 @@
         <h1>Tutor Match</h1>
         <h2>Our website is currently under construction. </h2>
         <div id="progress"><div id="fill"><div id="barpercent"><h3>35%</h3></div></div></div>
+        <section>
+            <h4>In the meantime, we would love if you could fill out the following survey in order
+                to tailor our app to your needs
+            </h4>
+        </section>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc4NJagwWwKHrqpAn-MB415Mtl2Qh_fy5lI2-fH686E2Tjq_w/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+
 </body>
 </html>
